--- a/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.tex
+++ b/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.tex
@@ -293,8 +293,7 @@ practice. The overview here builds on the Neyman-Rubin potential
 outcomes framework, extended for longitudinal data by epidemiologist
 James Robins. Although this is not the framework within which causal
 directed acyclic graphs were developed, the potential outcomes framework
-is easier to interpret. (I discuss Pearl's non-parametric structural
-equation approach in \hyperref[id-app-d]{Appendix D}).
+is easier to interpret.
 
 In \hyperref[id-sec-2]{Part 2}, I describe how causal directed acyclic
 graphs help identify causal effects. I outline five elementary graphical
@@ -552,12 +551,12 @@ investigators will seek to obtain the average of the missing
 counterfactual outcomes for the treated population were they not
 treated, without necessarily obtaining the counterfactual outcomes for
 the untreated population were they treated. This difference in focus may
-imply different assumptions and analytic workflows. Appendix B describes
-an example for which the assumptions required to estimate the average
-treatment effect may be preferred. In what follows, we will use the term
-ATE as a placeholder to mean the average treatment effect, or
-equivalently the `marginal effect', for a target population on a
-pre-specified scale of causal contrast.
+imply different assumptions and analytic workflows. Supplementary
+materials \textbf{S2} describes an example for which the assumptions
+required to estimate the average treatment effect may be preferred. In
+what follows, we will use the term ATE as a placeholder to mean the
+average treatment effect, or equivalently the `marginal effect', for a
+target population on a pre-specified scale of causal contrast.
 
 Setting aside the important detail that the `average treatment effect'
 requires considerable care in its specification, it is worth pausing to
@@ -622,7 +621,7 @@ specific treatment level equates to the counterfactual outcome for that
 individual at the observed treatment level. Although it seems
 straightforward, treatment conditions vary, and treatment heterogeneity
 poses considerable challenges to satisfying this assumption. Refer to
-\hyperref[id-app-c]{Appendix C} for further discussion on how
+supplementary materials \textbf{S3} for further discussion on how
 investigators may satisfy causal consistency in real-world settings.
 
 \paragraph{Assumption 2: Positivity}\label{assumption-2-positivity}
@@ -661,7 +660,7 @@ attendance, and the natural transition rate to weekly service attendance
 is low, the effective sample size for the treatment condition may be
 insufficient. Where the positivity assumption is violated, causal
 diagrams will be of limited utility because observations in the data do
-not support valid causal inferences. (\hyperref[id-app-b]{Appendix B}
+not support valid causal inferences. Supplementary materials \textbf{S2}
 presents a worked example illustrating this difficulty in a cultural
 evolutionary context.)
 
@@ -769,7 +768,8 @@ inference, implicit in the ideal of a randomised experiment:
 Conditional Exchangeability Assumption}\label{id-sec-2}
 
 We introduce causal directed acyclic graphs by describing the meaning of
-our symbols.
+our symbols. (Supplementary materials \textbf{S1} provides a glossary
+for commonly used causal inference terms).
 
 \subsubsection{Variable Naming
 Conventions}\label{variable-naming-conventions}
@@ -1091,12 +1091,11 @@ assumption permits that adjacent nodes may be independent
 
 \paragraph{Causal Edges Assumption}\label{causal-edges-assumption}
 
-The \textbf{causal edges assumption} states that every parent is a
-direct cause of their children. Given minimalism, the causal edges
-assumption allows us to read causal dependence in directed acyclic
-graphs. In Pearl's formalism, we use non-parametric structural equations
-to evaluate causal assumptions using statistical distributions (refer to
-Appendix E; Neal (\citeproc{ref-neal2020introduction}{2020})).
+The causal edges assumption states that every parent is a direct cause
+of their children. Given the minimality assumption, the causal edges
+assumption allows us to interpret the conditional dependence between
+variables on a graph based on the causal relationships encoded by the
+arrangement of nodes and edges.
 
 \paragraph{Compatibility Assumption}\label{compatibility-assumption}
 
@@ -1265,11 +1264,11 @@ grades, while adjusting for the program.
 
 Mathematically, the front-door adjustment is expressed as:
 
-\[P(C \mid do(A)) = \sum_B P(B \mid A) \sum_{A'} P(C \mid A', B) P(A')\]
+\[P(C \mid do(A)) = \sum_B P(B \mid A) P(C \mid A, B)\]
 
 where \(P(C \mid do(A))\) represents the causal effect of \(A\) on
 \(C\), \(P(B \mid A)\) is the effect of \(A\) on \(B\), and
-\(P(C \mid A', B)\) is the effect of \(B\) on \(C\) while adjusting for
+\(P(C \mid A, B)\) is the effect of \(B\) on \(C\) while adjusting for
 \(A\).
 
 The front-door criterion is less widely used than the back-door
@@ -1300,9 +1299,9 @@ shorthand for the average potential outcome:
 Y(a) = \frac{1}{n} \sum_{i=1}^n Y_i(a)
 \]
 
-We say that the conditional exchangeability is satisfied if the
-potential outcomes are independent of the treatments assigned
-conditional on measured covariates:
+We say that conditional exchangeability is satisfied if the potential
+outcomes are independent of the treatment assignment conditional on the
+measured covariates:
 
 \[
 A \coprod Y(\tilde{a}) \mid L
@@ -1375,9 +1374,16 @@ Let \(L\) denote the common causes of treatment \(A\) and outcome \(Y\):
 In Pearl's formalism, we assume that \(U_L\), \(U_A\), and \(U_Y\) are
 independent exogenous random variables. That is, we assume there are no
 direct arrows linking \(A\) to \(Y\) except through the common cause
-node \(L\). Causal diagrams allow us to factorize the joint distribution
+node \(L\). Causal diagrams allow us to factorise the joint distribution
 of \(L\), \(A\), and \(Y\) as a product of conditional probability
-distributions.
+distributions. Again, nodes and edges in a causal directed acyclic graph
+correspond to non-parametric structural equations: these equations
+represent causal mechanisms \emph{without} making specific assumptions
+about the functional form of relationships. This is a key distinction
+from statistical structural equation models (SEMs) commonly used in
+social sciences, which rely on causal assumptions but which do not
+often, in current practice, evaluate whether causality is identified
+(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024c}).
 
 Define \(O\) as a distribution of independent and identically
 distributed observations such that \(O = (L, A, Y)\). The true
